@@ -1,3 +1,6 @@
+2017-11-08  Kirit Saelensminde  <kirit@felspar.com>
+ Can now mint a JWT with an initial payload.
+
 2017-09-17  Kirit Saelensminde  <kirit@felspar.com>
  Remove uses of `boost::function` and make `worker` `const` sane.
 
